# bultrowicz.com

./: .gitignore  LICENSE  Makefile  README.md  about.rst  android-to-linux-files.rst  cd-with-angularjs-commits.rst  choosing-a-ci.rst  commenting-the-whys.rst  conf.py  context_vars_my_favorite_ioc_container.rst  continous_validation_with_make_and_entr.rst  dear_py_gui_for_multi_desktop_app_development_evaluation.rst  dev_workflow_with_local_tests_using_docker_compose.md  directory_of_bultrowiczes.rst  drugi.rst  encrypted_manual_manjaro_installation.rst  enforcing_python_import_ordering_with_isort.rst  file_explorer_with_live_preview__why_I_like_ranger.rst  first-post.rst  fixing_overscan_over_hdmi_on_some_tvs.rst  heavy-refactoring-with-high-level-tests.rst  hello-world.rst  index.rst  making_old_photo_names_uniform.rst  manjaro_tutorial__moving_an_install_and_encrypting_it.rst  modern_gui_for_multi_desktop_app_development_evaluation.rst  moving_a_linux_install_to_a_new_drive_and_encrypting_it.rst  moving_an_encrypted_data_partition_to_a_new_drive.rst  moving_from_kubuntu_18_to_manjaro.rst  moving_windows_install_to_a_new_drive.rst  my-tox-config.rst  pinning-requirements-vs-keeping-them-updated.rst  problems-of-opinionated-frameworks.rst  pyproject.toml  python-venv-zsh-functions.rst  replace_repl_by_an_editor_and_entr.rst  requirements.txt  say_it_with_style_in_cli.rst  self-modifying-python-function.rst  (+13 more)
additional_pages/: terms_of_working_with_me
additional_pages_sources/: terms_of_working_with_me.md
cv/: TODOs.md  build_cv_pdf.py  curriculum_vitae.en.md  cv.css  (+4 more)
(+36 files in other folders)
