[tool.poetry]
name = "bultrowicz.com"
version = "0.1.0"
description = "The personal website of Michał Bultrowicz"
authors = ["Michal Bultrowicz <michal.bultrowicz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
ablog = "^0.10.23"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
