[tool.poetry]
name = "bultrowicz.com"
version = "0.1.0"
description = "The personal website of Michał Bultrowicz"
authors = ["Michal Bultrowicz <michal.bultrowicz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.10"
ablog = "^0.10.23"
myst-parser = "^0.18.1"
sphinx-rtd-dark-mode = "^1.2.4"

[tool.poetry.dev-dependencies]
ansible-base = "^2.10.17"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
